ex-2.01/manifests/log-output-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      containers:
        - name: log-output
          image: hovhanneshovakimyan/random-string-generator:2.01
          ports:
            - containerPort: 5000
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: log-output-service
spec:
  selector:
    app: log-output
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: ClusterIP
