ex-2.01/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /ping
            pathType: Prefix
            backend:
              service:
                name: ping-pong-service
                port:
                  number: 5001
          - path: /status
            pathType: Prefix
            backend:
              service:
                name: log-output-service
                port:
                  number: 5000
